--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:t87jJEXx,iv:ImC+rvednUSkPMtNFdMMuV9mXxLd2k0LLMTx2d0sXnc=,tag:wV2s728U1qOyu+3twoLHug==,type:str]
-ansible_user: ENC[AES256_GCM,data:w5LA/eRl,iv:LIuYC+7+9Jigk6DRQoghbTY9sj/HwLJ1bK8NbzISKGk=,tag:w/EO91Ow+lq0E7iWoPgNZA==,type:str]
+kind: ENC[AES256_GCM,data:73OHu8qE,iv:kFhoHBM8TA9EcejyaPQ2p5NXB5HRmgtZ4J/3PE0ENFM=,tag:cmR1NO1Ro2etH4ST4Nkmiw==,type:str]
+ansible_user: ENC[AES256_GCM,data:6pNW/1ZQ,iv:LCXaeqxB/8QI5PC8S1T0z3K/PqRWRs53A/J7lM1VjAY=,tag:N64zfVR6mWfqRXAGBgRYuw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzcWtFVmJHS0x0MXptbHBM
-            VGNQK0RzRjFkZ2ZjOUljWWdmY0NsN3pPWm1nCkFnTWpyUjVqWjdYbXZqTHNCRnFv
-            MDdhcWc2ZU91cGhZQXRBV3U2SWJGaVkKLS0tIDdoMFkvRzhFcldtTURxaUh2bTBu
-            OFJlNXc5UEVKVHRQdlM4TTFValplaTAKAbJ+e0jqocIa2yP2e5LIoJVOhZDOx/yA
-            2PJJ//X+95IKMvUUSU9a8thY8Ls06U+tgLvVMKVOXUL/h66FAZ+79Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtTWxRZDRKOXJwRForS1p1
+            MjZGanFPMkJzSDlqNEx5RkkvWksxTkYwNW5FClJ1a0FWQTluM0pyOWVJVkVuanR2
+            aWVzWm1yakNLTjJNQkExN0dJVzdGVDQKLS0tIDZ1ZjN6cVA2Z2plRzNMMDRuUUZi
+            MjM4c2VQc1Q1RHR6ZHpNZVZiRnF2dm8Kcse4LRrDVyTEX/rCq7AdfAeJ4abomM1U
+            ePOB5K9tDjoMN9V0U07F7WP6mXXN+nhC1B+LZXWSplvNTbgD2jG2MA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:40Z"
-    mac: ENC[AES256_GCM,data:Rd5Zi5evXo83Kc1YDMAeC0nCCYiJZ2vph4de4byZZ48CdDYZMm1rxLuK5PBtzfQdR4ebliQfzXGUfXc+juBHqL5rVoIsReHrQXhALwQsoXFptgnSaI0Q5j6W3R3XIXhOseuaG8I4UocWIECkjiL+7EP8ATwCQoOqeiGNb3AQjiw=,iv:Co5lNvRRuWUWrW/CEwGqwykj/56ad78QR0/S7pVLbkc=,tag:IUaEDiwcPOR1OBhLyTnbxw==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:xtj1fEKldQD0mRmaGEzK5WqoOYvtnQxlo8h1G8ULHkBlKi9JZJq1lmwgrygdVMdfnZMW2n4Kz+kP/JrnwZQb5WwZ4BejeCDWdNy9GIEECPOJo/lcwylrBPQ3DPEf80U90YCBaWQaEBXB5+TSJMxqEelQIWXKqJH7eno+SulMouw=,iv:bqD1zjhadwceA9dINVDMMcqhTvCv8nHNBHvOG2oBSUw=,tag:4c191RcmNsew035ngSDthQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
