--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:iNdIlAgL,iv:spCdyHK0IfjUlyHkiZId5kaPURIzWt95n4SFwMhP8R4=,tag:52H4dfOzHoiFtO2nz5aJQQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:3SzLzwW8,iv:CZ41LiJCCpt0TunmuKx4pxCQyJldaMvW1k8nx2DofdI=,tag:G3B0dSxwRQVQasDezrJW4w==,type:str]
+kind: ENC[AES256_GCM,data:7TtjyApp,iv:250JbCzMh7nbsvjvfm0Vrvpx5tMYUxZ7fIRINTRDjn8=,tag:vXzlyIASfUWTiTcA+WbKwA==,type:str]
+ansible_user: ENC[AES256_GCM,data:Op9v4fxu,iv:Rn51xjFyDigeMZiU8gS1No05fJTUON0fTaxVFl2k2Mk=,tag:xmGfk5lNHu3KmpyXyh+yWg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuSlZtc0VhVEZQZ05uVTNK
-            bkJhU0ZhUmpkTEdHbldIR09HUWRndnBkYVZFCis5OXdhRVRHRzc4KzJROWMwNm9x
-            TERhMUcrUzRIZVo1TFE3TGlIdmRobzgKLS0tIHFjQ0wwOWU5bnN4cVdOUUsrRmJ1
-            bXo5eDl5Q2x2K3FvM3Y2clFaT2F6TFkKKCd/mnwrX5oA8CrRFRBFJVjHgGK4Xwqw
-            kKdxhBa9P6hkLYRarvV7/N78V9BUR/5k43n60c6+4g2HxFu8jbDJGA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUaWZXWFUwNENMK2hNMTFE
+            UGIydDhvdytQeVhQRHJ3N3Qva2FWT2YwbTBVCnFmVnhIUVcyQWFFd2ZoNUdPRnFT
+            RHgrTWoreXlUZ3FZbGcvRHNySHloU1EKLS0tIEJwcDJnYS8yUU82VzByNUFHRHNq
+            cXNSQUJhTzBCKzRVMGJzWmNyMUk1ZHcKJwSX28gWN+sYS2U1h5TF4+/HgOtDCYb/
+            xB+n8nwDgXkcM2tHIFh8SnJLy6VtHM4upb7HIBvbeg92P+95CiHDOA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:40Z"
-    mac: ENC[AES256_GCM,data:DcTaZLRyKZsInnyDT/ihdIAyB0gloqxkTs9p6BXSLvlNk160HvKd80MwrYpkSJz5fUw8vdW83RdZjX1uWFwh2S3EpbhnUfg/X4g8U3ONuG+01XHJM+v9fe09kFapkqZffRUCFJgwYWVb1h8BZjXWnqv65yQDUBhXlGRmfp2AOJk=,iv:8dDhADM+vORL5dScbXtH2SZeFQGNQ/aF9xin28fuAYg=,tag:Oi5L4BaqfDizcet3a4YgYA==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:AMLBb4fCQqWS6TtUV+l9o0deco0LUJ6XOyCFaYp3kdcdts2vFuoI8A3FlnOQXgwhD2Ac29yZb4/OEwukkzfVsbVaIt3uHLrbF3JOQfTckEsJxIzziiWPrmvKlyDJUhMTSq9x8L7TCZ/ZIZ00dwIhrRlq1gaWyN2+dJAWaHNI2FM=,iv:aijVJrxzROCIhvAfjI9agsbkVHCc+sUywBsfjMk5Lsw=,tag:qCpyPPZFyJZX5xbjLoJ43g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
