--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:lLsnepJ1,iv:Kquwy62iG4ynaRVgNyxwIwP06yUTMsfLh7dEXHuxHTI=,tag:Y2XJaJACvtnzTMzukmchpA==,type:str]
-ansible_user: ENC[AES256_GCM,data:8ELPFSc8,iv:IKohvABCqh+CfiF2lAKPUwigED2HRZ7G9dSQ8RprkfE=,tag:xwb9WgEdhfSGuzXpoIxaLQ==,type:str]
+kind: ENC[AES256_GCM,data:Sw2WZ9zt,iv:5aB5EETKwijgFcoSCizB4rr2nSFwVTuf6koi2EHDHTs=,tag:0gGXX11mkcQn417v+QyoUA==,type:str]
+ansible_user: ENC[AES256_GCM,data:zhvyIg8J,iv:pdzJ0TwQLeTOy7G0MxbbAecP+LpPCDANNvLikTKG9JQ=,tag:PDzh0a29RRj9jinrCCQKkA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5R2Q2UzZwR29xNXQ0YzVL
-            MjZUVDRtbUVWZnJnUDNYaStsQk5BMUhnVHdjClc3b0FHNFhWdWIrYTB2RGs3SFZ2
-            czRINWJmK0VNNlhXMFN4Ynova3lxck0KLS0tIDFwa0NpSURYeGtwcVdhTmN1WTNI
-            cG5LU2tQUmxLZ2lqelkyUEdLVzF3UGcKoWEL3oqxQdF7exX3S4o+TgFbntD2xGtD
-            Y53jgiOxqvKpN04s6vwLnftsDW/CALmrNu/YimfS9haDzddzeaWRhQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLWWxmaVlyOWl1VUExTDFu
+            OFEzUkJWVFFPV0IvK2IvQ0pITVVRcy9QSGtvCkdqYzQwWFZXL0xpRFF4SmJhejZY
+            WlIwT2xJYkxLL01ncDhWeTNsZUFteHcKLS0tIFdDWGtYOTNhaHVabXF4ekZEazJ3
+            NUNUdHhEZjY1QkFoV2t1YS9SeXdZT2MK+mbG5tBmqsgVWQG+UIneGl6NkmDmp9Gq
+            ebHAPLSq7ZzXd5cc/YCWEciLbKqua3/vhmYVaCz0KG570eYKsEubfA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:40Z"
-    mac: ENC[AES256_GCM,data:7b1eeRdozdTCS0+wSKPDjxzK4ddAeS4R4bVwTaW9dGfWZ8thcctMntgGKb+8cfK27Qs034OUjqIjmFyHaePl+v2bmfdMybnlA9so2wp3zUcmBYzQYVsmgsUmi2xJ0fsxIHbvAh2/PMZoUCjc/HqH8lsQQi4lN2iDZoaSMFlm7T0=,iv:5GRwbTT4rYuu6LVGKUDRqkou0EPo+jW84bltE4ZG290=,tag:Z6Vn4WuSCAFjuLzAfkcwCQ==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:bLzF4zALrxbLhh+2uYgtyz8N9pgRb9SOZUjjOJEzQlOXEW3ksvFfo2XyTn1XddIlCHFAmcAhvtr5uQqyxTSecBjK59s/YKd67W6pXEkoEK+zynrSlYW/ZWqhW2Mi8Jg+9VyqBGqOXIIOx6Un3YXHiNhk8Bu/vdBgf3rZVW68sDI=,iv:eILS5Z5hMSVIcEJDMxM+7xKxF/5vkKPfHYu+0lh2NSs=,tag:4mkiXq0MWY9XF1iJs2iWjA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
