--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:A7AwHuWb,iv:5YMzQ2LesoT7uTlHjCFhcgIf6/dkVu7MGKPLyETYJiY=,tag:WcBr4aAKDVuCOG6t8JSiXg==,type:str]
-ansible_user: ENC[AES256_GCM,data:fnTVPHP+,iv:60ZDf5o9oq6Mc7j3wU2qLG775FXUOZD8oQc73PM5jlo=,tag:8Nb9tM1mvWyhuKaVhMcycA==,type:str]
+kind: ENC[AES256_GCM,data:QOWcR6Md,iv:rKZEmiCVNpNY65un1QcEcHhJ2UtG3Fmus5eryVHcY1U=,tag:oLAnv3IWvDzWGRWHRIpaFQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:XK8TeUl7,iv:4h/Vh/ekzN/aM/BJC0kZw4S8H0Xp8LaH9L14g+es3z0=,tag:TzdnVDymHJii2rJxLRuuMg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpVDNDbE5lRmdOYlBuM0ZP
-            ZTJScUp5TGVyRFU5ZVR5Y0dDUGJ1QXgzNFhRCkR6amk0VE1xcHc1VXBXcU95a2tF
-            OWw4dmljTXZUTWpTbm84NlJKOXBWWEkKLS0tIEJzOFJ1b1l2bW8zQ2RtcG9KLzd0
-            dzNwUnl4Z3ZHOWRjS3Bkemp0QU9IRjQKNnihzQMFof7acejX8a306zH8b+55ahuP
-            u8C+WBDpNVP9aAaDV67RFO+zNgaam9cwMhR/ijTR023N+DgErdaQkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6UUFXaHZmcEkrRFJLLzJG
+            L3RocFZaODRJWU1XdmpyWjRINGlVWmU4V0FBCk0wak1VQW9JdXl2SGlhZndnc2xB
+            SklXaDFBTGNlckNhYXpTemZycWVYY1EKLS0tIG0rQzJoTmxoVCtaZ205Z1VqcUdk
+            TW9ZbTdYazNaVlVObk9HUmc5N0xEQncKbguvEKKp3UFMSYgCGf1DsSP/r7QZMZA4
+            gYqKigbB2OmtGu2nVAmnF1OTSD68cCdtBs39zFfYJnVY9yJ/6FHCeQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:40Z"
-    mac: ENC[AES256_GCM,data:xSKm0s10nRjpBfyLu/sXpnw/WnvL+QigLHmRA0UcrHTpqdG6egNkdsWzg0S3p8BJBcAjLO4pciAxjXK3ChrCMuw/fhbKqxM70E4GmL/cxIFl8qJhVg3VZMer9pHqAvLj3to2fcUJR9E+tCVVvepv9jhyB1iIUnNfb1QjSb/o+hI=,iv:6k0HhH7R9DeDYwBJKdAIrxUXIywyommpNEYHBdzrHQQ=,tag:/6MMXYmMKhEOlKfMc/bYvw==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:W2rA6es4zr5/E9XJZ151tSPq4rbJ4FzdcVHn9OKdpbWz1hsJZYbxEgxDO8ECQjeOctyexqpyljxROSnBTWqZuezCfXpkj3rXIrh91DOsyDMke3ooXN2xmN7zXMm2cDB6wBWyv4TLoVTGgqS0bjCCypS8qcnHYZtRbhfNVeFjBnQ=,iv:V4jyjTEwUB0p8n0qWOTmifmnwFDeMnShTLEuktRuzTA=,tag:6bUnUxqw4K/t6+gHvvmZmA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
