--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:N5hyfqMS,iv:3mP7gxghYLvdxhCWbM2+An+AXmi3NyzkWusAys67xVU=,tag:ut8ZiGD2ejG+u1yeg2lhEA==,type:str]
-ansible_user: ENC[AES256_GCM,data:hoTbWR2v,iv:5Hoj/j/SHYtATGMeV1z1xGlDshD97LkoffH9cqNTM2Q=,tag:JIQfjILS3wr3n/Z619W/EQ==,type:str]
+kind: ENC[AES256_GCM,data:iBgQ4asI,iv:FCwbBw3V87+CQgQqGEdOcPHPPHDGY22H9NGiDzLU66s=,tag:Y8jISzY5oVzzsomVlLg7kw==,type:str]
+ansible_user: ENC[AES256_GCM,data:yXgLGQDK,iv:W0CgeAHDU3LMvbWNkec8f3+QHwo3YvX48XJR2x33ong=,tag:BoFyOj/u6U3q8/J9uA4erQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVWisyRUFQaGhJT25OTGhJ
-            WUVaOEpsaTk2SUZ0THFRMDdXS0Zha2Q3WUU4CkZOUG8xUnNyaW16SU56b0Rqb0ho
-            KzUrMnlJaGRxdkJNZzliQmdTUGZhclEKLS0tIHpyNVBKZURaSURxVml1ZTNZZ3VV
-            QW9kOGtrMDdaM0I1Y2VKSUdDaHhyMG8Ku0vEqwn3pRG/BY6P0Ru4tlnhur25gj3X
-            DVhG2a0tst/fY2UL28Ofg51w8BJfJXPfURmIP1aktQqT0PYiEnVE7g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlUGRreW1uR2piUlVDUGRE
+            QURvK1hDNXZRdlRaUFNKMElVSWJXMW1EVUh3CmpuMjBrV21vMXFmdnVvMEJHWXMy
+            MTBaRnh1MkUrbFoybkt6L0hHWjNTTm8KLS0tIDBlaGRmMG1UUVRJTDFjbXdHYk05
+            aW5zUDgzWnpQajRVZTRRWXFtM3VRS0UKCK33wvjALrFyx6jR4PNJxpdNrneLp9mW
+            pnivl4fWX5HX2buYDl/5973SmMIC93zwZYbfscc9NS0fIp5nfa79pQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-18T17:27:08Z"
-    mac: ENC[AES256_GCM,data:gHi/ESPfNd5RtC7bL/LrP8A/x3redUJwEces1grW6QPzklvLKS8tV6JJDY8LrgZCqWK6d0aYay0eGKRH32lKVmkZ3N/3QENG0/x8B++KLHS/YXpx++0R5Vo3BUUkAGUT29eD4/2HyHyZgdVEM4HDXirq0lGXIEihvH+n9DXHYcU=,iv:eM7j9UH7DtDsKBmqWWKGdqfwQUMTZJ/ISXLpkO6nrNk=,tag:EDz9VokrtSmFiJOB4FJN8A==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:XJnSwnelqrkALRMGgXG7H12kg3sVkd7yaIFOqe+KwExmDdGmS549WFDQntdI2ByvLgYLU0t1FXtBiLx7ZHQF2CxJ/g1Jvx/yUuGE1FyTHSiDkeJ9q6c8Izc9W15I8rvWd/laYe1bGZw+RP/FKoNAXATGL5rpdegdvaAhEfBRBO4=,iv:bQ8vQZW/NKIaoC1P7URjArCIRD10BQkgdjpigFsN7PA=,tag:A5sAM3Boh8j2+EA6poSa+Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
