--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:N1unKDQn,iv:JbikHyZG8tgZN/NSY36OeqndBISWeSF7CIHOWOvvFVY=,tag:6AyXW2YNVvsAVQ647AvtQA==,type:str]
-ansible_user: ENC[AES256_GCM,data:tkcnvI7x,iv:78eTsg/cN/MUsMoqhTAh0slybewdEFpT9K5Cpnu6Y2w=,tag:XEHgfMQGCiHVG3SyL6UITA==,type:str]
+kind: ENC[AES256_GCM,data:/I51MoBV,iv:ZJ35sgdKWE/S5qqzu71OKEQ72n57QiLuooOfT5nxRxc=,tag:fD40+dxzXDCwLD1S0WI7bw==,type:str]
+ansible_user: ENC[AES256_GCM,data:fqLFpIrF,iv:CTgJs+LOeQ0NCJNzsKLj2ImNsPm2y+berJyAZOcB+YU=,tag:ViBxY/hf4gg/Qu9rDf/bCg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBSExzLzdCQlhiU2V0WE5q
-            c2kwRFFYdHovWDgyY2s3MlZmcHZBejlUT0FvCmdCKzNaMlNZVTg3TkYrcm4rZjd0
-            QVhSZVliMk9wSWhzajFrVUE3QXFVTGsKLS0tIDZhR0R1aVpKelQrN3poY25oS0xl
-            dHI2UFUxSlYyQm5Hci9FenBKZTFsU0kKzRglqKTW9oYsPGFh82WzAZD82dqQCZ0E
-            bsWXLwf5sb5RLSd4XomCawQKMzyA9/SXi43zLD1GBtxe2z2VhEvBuw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVVTFrT0IrdWRxcmVka2I1
+            R25QK1JqSU10YS8zSTQ0UFAzdVpYYklMc2ljCmpCYVZHRVc0enF2LzlkTTJsbFhP
+            YUdpVG1vQnVTVGpUTFlkRWozandyZHcKLS0tIFU1bnYxNGhJM1hXb1l3NHNaTm5m
+            d0dob2Y4TUNGOGg1bWpaRzhpUTBqamcKqJrKvJcA9tw1qwbw2NTXE7U65/OIvprY
+            aOk+ZnKow97HOKUIpGPlWY6NqjZyOOTqka3bT10kbyaXdmGFnZhfFw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-19T20:43:10Z"
-    mac: ENC[AES256_GCM,data:Yxe8EQpe2IlwOmWhHeUBK/vXtN6lrGDU5jSFJpPY0BTzrAf4BY8J1qrUALnwRR+blpcMytXIytdNrk8rhedW+Js3X7XSQwWEM2VMffyHf1xhk4WyrzYcLkarLhpVsq8XRescHo+26GqnQHQSCUs2U2bclVSjTX7LBtTPYo4+D4Y=,iv:me43VwShQEj9JiMeJn4B4OjWKlybJmjAwUxKGMcwN7c=,tag:0+82MFjHB3TU0F/kJqPMiw==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:2+kSwGIJr1aS2VT2hBDjJlBsj1HLED2e1sd1WB44Egue/fOcuTNpCkRkLjeA7+lKrRWlDKgnljtmVwpGGIeyYmma6A8vfkXEsSl2U5Ets/6pJTIkaZVwmV+2KEDJX45lUP8udCr7G7pQoUJ8l6IygPgcbyzb3vD2Wu+ddNOTHQI=,iv:S+88tqZ50dQyAohP+Qge9snavIDa7cY35isgrPRgu6k=,tag:cg0Jg6wjw3HTglddtza8xQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
