--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:bJaCZaui,iv:EDtXNMPkCCmvqrLuvM+FoC4hPBUPbemyyiy/MyEovoU=,tag:mRcAqzPb+spzl3EZxIZrzg==,type:str]
-ansible_user: ENC[AES256_GCM,data:3M+fcLUI,iv:ZFiCTZk/y5HSAiBf4kIwsqJ5I4QVwQEy1FZ/aggp3Kw=,tag:2pSpXKsloZ7hz9Wd6oBftg==,type:str]
+kind: ENC[AES256_GCM,data:vaYdxhj4,iv:Ohs0vAeF5ud1x51q+uJKR+wqmjL0N2kr+OVdX10jE/Q=,tag:N0OdImyj2MJ4YioEX8Diyw==,type:str]
+ansible_user: ENC[AES256_GCM,data:cH1f+WMu,iv:J0zr+DXJnoIAFwHcWoMaScKzOniswJY0fjICwILUzkg=,tag:A8FyX77zWHZb5KbdzWuWEw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZNm90VFZSNVZUY2llb0cy
-            TUFtM0dXc0dDaXEvd1FvRlZHays1aEYvS0ZVCkhVbzN0dUJSQjlOWTZlTlZFRm56
-            Qk13dElmM2U2RmcvVnhCanpNQWl0UjQKLS0tIDBDcjJsWGRtd2FLc2RKOUc1V1N1
-            ZU10bzYrQzlYRXNGb1dJZU5sdXUzeW8K3Lgbrlj6NYlHSZ46KfknP/HaCYcqHRfB
-            YRbhmL9rFGiiXZmYpeHoNajBkDhj4+S+hveSwe5J+UOrO+muRIwafQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMWxrOXM4YWI5ekkxMUlG
+            WTF3RlB4ZXVTbUZIT2lkZ1ZycjdJM0E3N2tnClpyT3YvMk5iTFlKdWJQOFpCQjVF
+            blh1SHlXaDJ2d002RXF4K0YrYk9IeDQKLS0tIHhrZ2loOUZUNzRYeGlTYVRsayt4
+            ak9XaFl1Mlk4dDJ0cGY4TW5ZTzNsaVEKtN2U5JR6yBCtr0ss1KKpKx7JCpbGFWIp
+            4vcB5sGT8kC1vmoY+dwDut/yEax6l8CDqmnO/6fKpBulwXfOpV3ywA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:40Z"
-    mac: ENC[AES256_GCM,data:O5+s8/l0XYPA4vjs2XGLoKS1cIDCrvgM4Ajr2XRa3aVG2vjkreOO4pER8jtlvsHhWHTAxoH2UbJjA9Dl01a/qqu2dxCC+fzlnmn3EJ3ARVSfG/cQOmmuRVBegXHeMuXLi4uG9Cn5kAaF48jfjkprw/tCVLuNGep1PtLoBu+yQ+k=,iv:KEcfpoo8EHbZIDL8iuyptDmPNujY8fGrq8qQd8ALcN8=,tag:DxFaxzLaazxdbIBmrBw0fA==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:CmFHZOBFhaE45wXqc05KV67kIssFPI7PtJ5DlYTJHsZJtZm1N8Hs5becXn03mbTsajI2N49+tckPS5LDG1f18tccF2byBRgNPXK6rFoOUVQjO057wRlF+65LdvsIrNgr8i1vQnQ/kWeQunnbtDV8vcAgRa1MkAT001rJXq7Inao=,iv:GPY0JvpDuOKkhkbXT7ljFBsl7vm9PTb4zzOPDtYuIns=,tag:UIdWW3ptpnhoruOCSP1guA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
