--- a/ansible/inventory/kube/hosts.yml
+++ b/ansible/inventory/kube/hosts.yml
@@ -7,6 +7,8 @@ kubernetes:
           ansible_host: 192.168.1.31
         k3s-05:
           ansible_host: 192.168.1.35
+        k3s-06:
+          ansible_host: 192.168.1.15
     worker:
       hosts:
         k3s-02:
@@ -15,5 +17,7 @@ kubernetes:
           ansible_host: 192.168.1.33
         k3s-04:
           ansible_host: 192.168.1.34
+        k3s-07:
+          ansible_host: 192.168.1.16
         k3s-08:
           ansible_host: 192.168.1.17
