--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DFNe0JzuYEAuR33o27gOHtZ/v3et,iv:MxYaNXUcBplzCHjydBQmlu2UVlYn495VQdtliEIUj0U=,tag:WiyHcOc7efuZsn+3SXVrnA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:9x29I/5XktxDj2p6W6W70HTKwmj77rvAyTcRAv0cFRPiLBfltw==,iv:3/bLTTFpuD0pAlRE/UvXW75LSaHbP/jeO88wIsBTCdU=,tag:i67sAVDqb57KVVqIrWbCPg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:k8P7aWjwkJ64dHE=,iv:EMtIOUFl3PXxignvIJGKJTR66IW9XEKGcjBg+H1D6Ac=,tag:sD4S6E+iy5fKMAs5EJQ/rw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:VtxyLHn2aZVQiFBIufOLxdqgcUM5,iv:DB1tsjiFyLNo6syInW9/4JLRhojzH+mXx7YWBjcZn0Y=,tag:zDop9DHDr+EggBCkuswybg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:7S01pMefC3ayiQJXqG3lkFyQJYz1hvLnBlYGX60pLmk5CIW3Dw==,iv:gvw4ywR+qbMeLQJ6RJ6ILfhPpPrsri3C7Qcvfah7Imc=,tag:gddzXa+lxomZh8p2IHQnCA==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:wo+F+cFxr4Dr5gI=,iv:NEiNY7s/EBtTTmZzNHgfC6OLEOGEU6iAJbVraOJQ1Ek=,tag:PraA6kUbjNcyTv8RB+dkCw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHVFV6S3NPTVFVVzZUT3pM
-            T1UxMVdmR0c5VUdXb0k4S2xZUkJxdVdFdlMwCjR3WTBweklBUVRlcjU4VkdCdW4r
-            L3pMZ3hUMHNnSGhITWQvQXlsYitHdnMKLS0tIGp5eWtaekJneWl5cDRqUXJlOUlT
-            OEVQbHZxNTBvQ3VwVmJQY0pVNzZaMnMKdrIZdZoewNcEoxXhSS0l0IAZtoQAnN5F
-            JjsTn+GA9mWNS+yMCq/l4FHfxmECBB/dpwx+VvAWJh3EYZdf/WD+Ag==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCTlVQanU4aHFxYUlEcFBH
+            bnZqanZValN3RW1mVG1Tby9Xd3MvZlZKVjBBCnd3cUdFajlTZ1Y5elJrUUVPL1da
+            WHFMaEFndlhpUkVERGswVTMvWjZyNlUKLS0tIEN6UXhnZ0JBU1VmOHZhcHZpZUdE
+            NFpqN0dHY2sxWmhoaGNCYjVjOFJsS2MKADu2MxiohQDpFz3YN+IzCP5OUzJng6g2
+            AH4fw3QHMrjwAZVn8BaB4h6OCcM59clKsmeAV1BP4DbUIXxAsoC8qw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:39Z"
-    mac: ENC[AES256_GCM,data:3M9BjObas75xWdnmzwZkWQmfy833B10VUAIo8YvZLt1DJhAiw3k8vwvyRRraBPpx0td/dxrs7JAFZFyO5LbK0IzslW1bgE6N86U9fC/YwkqsyYWHzk1b3ONMSEMkEhoJsU/zqEbD9rx/epVVcWadMhSOdyIi4i6ZMv2Pvdc0J5k=,iv:Gkuzxe2AxJcm005hT2tvB1RAGNpA4HgLFXT9ZVIwJuc=,tag:K/kKJ7gGNGjbHI+ufZlZsw==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:UzZGPYCYfeC+ITNrZRzu8zAp0zOFyA/gGqP6KPaMU8Nznmh1EUC/OaYA/yILXLMGYQ4WbutvWHnkG0t5spt+ybc+sHAQsMqKQhSD73TobIvN+XdeN5XNdAilQwufq/GJDnWQNV2IF/tVoI/mVOCpYuhBUt5HsPWnxNBQqq8U+SQ=,iv:n4h5vBv2w8yg+q0fuOIjLDvelxTFpyC9+89DGmqJ5ug=,tag:UmhjZXXS/9X2Fx/tz2DayA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
