--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:/UZC8rM8xl2YGaU=,iv:g09i+hRE2gQ3Uupb+pKuOzoK1H2SdWEACth5Tqe/soI=,tag:JTMrQ29WHFQPgGqZc4AZvw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:lEVibCTEB/hYs8+O0OpyLKipFsQj,iv:lXze7gUBMrOO0dbsGU+i9Q3kEi6L52uuIJ7ho/PTIFs=,tag:+5hC16L0gxbA53nnvJYyRw==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:yQeq7Y/vUKIMviZr4CuIIYE5cDES0cPpXzJkbZHW6uE4vxb5Es62qE1YmaSM0Od4L9AJELSYNrkr2FG+GCZ/PQtiw/RZHnM=,iv:CJObGxqCGLm1uPfXuM8LqWOjampbVWiOQjD3qPP/tzg=,tag:V2t4023M3Gu+eGuh000Njg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:L74OHkJRjeA5aQmfTyTGRFqW6gE8T7layRiGyg2r86/A7Tk=,iv:nzVEJpe+WOVkoe3HD8+V4ZVlB/75l3D21+A/dkuR2pw=,tag:RHzjSTw4YGg1mf/ngHp2JA==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:gQN1wjqHnf4vRmiRZQqTbdO2Zg==,iv:LDwPOJ8wK0rdBRMd5IS8EzfjTcEz4PK/8rlpBHP16DA=,tag:WIRggUg15PaMxUBr0Gj3DQ==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:7aQixMFtjDSIEuDE4lsfiu4v9KPQ,iv:ltnpspizK4ZmQaXd1BMVsG0iOdI0A3iy7h+tzW0anko=,tag:vLh7G7PZCX3mDVGuSoK+UA==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:PtMQ2848QSw=,iv:4rE9f/olQyhQU60xEYbI/1Y7VB/7tLCy0Jlai3ptgkA=,tag:fGrogTE0IIYnPnnUeZ3UTQ==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:G7cspBLS8C4=,iv:jlk44HasNz5a3v0yhebHhIUHZMdppjadiHJMZ0Xe3Cg=,tag:8rpmj5eU4SrFzkR0/AaH+g==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:bg2+8uRN/tKT2T/lthItQ89ffzY3vddqYgjzk/Pofd4Qmvq4OKiLFuC5XQxkBQw+6YpjmR+g7nKY1dy5hpHfAA==,iv:hZ1OOBhZwCuQHDASH4KMpoGSsvThD6dKHmxzD20WQtw=,tag:6kxOmBxLmkliELaNGfNaZA==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:Wi00monUZbgpOfcJBduvI3Ej3cX+/3A9FuM2oKuYXU/ZR8DDQd+caIuWWojGX9N0oQs2/hCZI3Cty26f9CRZiw==,iv:MB7Hi5W1LW+c9whds1QL/RZHGmLvUrY0om5PG+nG4+8=,tag:fpE0oqJCq5H1Dn8XkY2YXw==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:jZMeChL+soQn,iv:aZL++Ae3iRPBqpNbAr7QUtFjJRSkM0nXObVu2CZk/PI=,tag:wU0TU6M1oJSlwTK1gDxYew==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:/IHtK4iA3g3qIyTH4pu2,iv:Qr7lpiMQVbJGoIPzDGz+wuMv+bjWpp/EZqISYhIOB70=,tag:4JQ93o1eTWzI6GPTuqK98A==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:mUfPth2OcLIbStNUthDM9K0qH8WSW3gPKb58eZ8MP4m7NVQUd7lLaToZ0agz2Tw72Kw=,iv:ekog5TQ9ZFXHC5mPWVCpc2Pz/Cn0SP17y3Fzs+1cByc=,tag:zg5DQvpfkHdGYg/tSX/Fhg==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:RcE2y4LhNLyTDi4J92c=,iv:8ObAdfGjqoa40Xljz+dycQnX1QL91Ue4FURli8cBgQc=,tag:tlBjhylr649nL8mj8M9VNQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:ebWdq9PDDaz1qc30410pVp5IcrU=,iv:PM5wPc9OObxZfCmm9dekG1HPYFLCyZlFRZR4c0szv7w=,tag:vAGhoW+4NFEq67RXnBQGEg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:+YFpg5C9LuY=,iv:XgktVinw5cFxqKHGO1ST6NAZeQm8SwDPWaVNGGyr5yM=,tag:lNFqc7cbwhasMag2kfSiGQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:sh/nfsy8WgvVaoMqQ3XNGY5YDyQfWGxLWLjzsSFIeEDld0eGfA==,iv:+p6Pi9Fm8SpWLxsxm+Vytq9FNUPuVNtsC8XRCHvPwak=,tag:dkC0frsekxFpMsLp3Mw6qw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:bGwXW4ByPKnv,iv:7zsrWms2vH1aZly031vKCiM6WdivUdBGIE6WaNUXIC4=,tag:9CZknkBxBIGYKkJ7nG9rDA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:MW0JI013sF1Y,iv:hdEEViIxEzuLV7LkBDDPrjMz/026bm6jn5quasukH98=,tag:O4vSTRq/QON1tXDNZ1dw6Q==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:JUD/420JCA==,iv:B3Uz7JfgyqJz9bK7H0WBMEmOjJ3zg3CF0fadthgvJ4Y=,tag:JQeX0mLihaRYMpqv6juzHw==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:DXPjvqg0Uyx+,iv:GxjEpriHGMSD2oyUFDxcMhHkliu0nM91+BpB8+jducc=,tag:VrqoCnikYTtmyXVUlzHo6w==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:DxnfJVNHh3lbi7Y=,iv:kPgEYciuHUfuhCv+4yZrM9KY2zSUg5OoMCR3om9bYoo=,tag:wywynuvkOzVM/btvvTYz4A==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:NfvZlN7uvCh5g6j5GZrXxKCzu12M,iv:9izLgd7D0jCQOPEaC4VKoCB+hMXs6S8vSRBfoMNmSII=,tag:gM0ewwgfO8jpsyW2kyoU8w==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:hUFEsOcHmPxcu8SrTX6FwMZer3iHTjSA+tCbefYijxuGVEhuCgCwmVRJGK5XCxDdYjtb0kZ9sKutAdF5Xmj8DDvzjq92haQ=,iv:uqE4130FSesYIUkRKQydZUIcXsjzj47jFFrTtNG/PPo=,tag:8fPbk+Fd5UjY/E0Tsvw+Lg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:Y9YsOIBIbvZzoUrljE1UsSjbEFzBaeFLvTEBMYDCqcFY17s=,iv:U65rU57kHNe4PqMehLP8Owt/O4uCZOAukJ8qQPKWJaM=,tag:Nbol6AnbQ2NZT3tBmrbOqw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:6ax2cmlK4VVDhNYuL+3ti/567w==,iv:n8gkAom9RoIPD3LE0Ca9whlNXT9LAsrKR5sHbIYKcXA=,tag:skJaeXtuVkO5sBeS/M0rnw==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:Ah0HmAd9zgQDzpFFKkKPyPV0Afl7,iv:qid/KHpYxSsmX27bFnQu4Fvn3BcLctzUK+rLwkY0oG0=,tag:eBy6tWm45aovrEERSpCz0A==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:axs0OU31KJk=,iv:zjOZXvx9L+7EWoswlF67Mwjb0T9GPt++j6OS1svRYr8=,tag:PsrcsQ0/hmUhiEJStpFk6g==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:wAZ/gSmp+tU=,iv:8ki+iiC25z02t9jSYwRxqvvULpUddGG7zqM8eLC4EwA=,tag:YyFVbt+rVxdevcco2sAIzg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:HfAmJa9eKUxbgRqn+TbA2X35s+ol1NOzpYzcAEVW2v4rkCQ+aYuxwY6glpPvhhRYACQmtQKV6d5ZrA0DU9TIBw==,iv:NiN/Nl4KsUVG9l2P46GxmDskxHC4Kl3/FovrSos4jAo=,tag:HOBuYC+56m9vPr9N9gNKHQ==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:XgGTXP4Ota1GWzAPVW84252fBc+0e1ikJhVms/2epAyFDVQiKtDr1ue5f9hhwnUyuLWhiTRhjueU2ryGrjB7fQ==,iv:1dCDUWdHfheMPu5OoDCDr9Zuy6/G45jL/qfLPhMMSP8=,tag:G99nLcZ/CF7nh83QtXj6FQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:wlL/GTgvP4NR,iv:g1PSF7qi7jQyCnOwWPUAeQITew3hhwrbNu37U/ebacc=,tag:bNkl3MpEgYXowgzSo09QeQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:jw/uendDcIWjeCrV8yIg,iv:14mQD6gA4MjNmRQIT9KTu+/IBfb/hRol2geyFO6Iqhk=,tag:/01KPqKCFIXCNVvW317xpg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:E0/kTCPamGrssNKafISX6XGVGfAb69GZTmAuRy0mORRkd76NM4hTY5EPv2LkFwC2JLQ=,iv:V1DiRm9iPkVzvE8x9FB0w5v2aAmBH//t0Hv+iLBBVXw=,tag:Bhto2ImUEB3otGlOT20zXg==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:a+tcfo6PGpnmekVB0/g=,iv:lPTZ47kBrYqhz4B+ebvq5NvLZ8KNsNQ2ROM+5/X+kGM=,tag:Q5cphMv04+fOv6t8oSlZyA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:/HuREksxlhyw5huMtXj72KrMawQ=,iv:wyAMlVAvSC/l8hk+srdFrRgjDQv9L5UyFNC6v5zFIUI=,tag:icHeI6id6lT5HzEQEczHSw==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:FESDC+vcOXI=,iv:9x1DzQtU7dTmd7EflUURkTMU8g77YXz4w+i9cjujdts=,tag:TLPIzk8AXGi+c7gHaSq/EQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:ATu17ZWmEWcPH6tIqXYb9VCn8fkygNkmyqKRN3nvQp3ZuByRMQ==,iv:u9NkyUv2OHbciByxo1f/jXDEqj+ZK1/NvsxREmsaMlw=,tag:FBmSWHZQaH7KryVS9/EKAQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:PLBf6Rs7652o,iv:pyO5SXvuSon/ZygqP6135F2slicDalOupGGvU3XVSE0=,tag:awlTGnGyWibWm3XIVNi/4Q==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:YVf6GpOmJh8u,iv:6iJ2YOgs17H5PXEsuD81MQ6Sy6ZlrnQUTyN84rTxUOs=,tag:/VgECnORKTRpRIxe0rKHeQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:wCM/VUMujA==,iv:canOLSzCFgtiEstG02AihylclTBrQOWMYEI6f4gJ8fw=,tag:VVCG01GU6cUtttxmZXZ0nA==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:m/7Wjsz8YnOL,iv:Y9UxFWQREaoIoXXVHyXUtNN1OyG27+QckIAE9fXVCQs=,tag:zNvai8dNZNNaawmZO8tEvw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1cEZiUG5TVUh4SVhFNHFF
-            c09UY2kyd1BFUDFvY2ZTRHFRTGRoMG11TlJBCmdCanVvNzE2NVpsMGFYNGxOS3hl
-            eFp4ZDFldE40R2ZQQ2hFMVVMS0VWSk0KLS0tIGxOR3EzZHNQNzYxTHdzM1p4K3Z6
-            aXg0RGJEbDJKQTBnZTU2cWs1MWVCTUEKhVecWGYcF92PyDR0JDv9NC9S1HsEmDfU
-            6b38HktRxU8/YuR4JcW1/RP0ShQ3lqLHaUI0I4YhUXgtkShzlZSNDA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2ekYxMTdGOStFc0NJdTgv
+            SWRnTTRpd0RseEM4RGh3MHJNblh1NWlJaVN3Ck1QN1NPUHFXQ2NrSlYwdjhISEla
+            OGpWWEVqaWl6Nmp2U2ZaL0hRTGZUQXcKLS0tIEl2Q0wzRG5kUHQwTTlZVlVqOCsv
+            UnRrdkhLY1BmWEVNU3FwUlp0T2lhVlUK2mbJhM5+gjrNYcKtekrZ53GAHAiG0T0H
+            j6mCf3YTPDDw4K/mp+/uqCEV7kAFHdI0DwfXnVpegByja0PFaoNzVw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:39Z"
-    mac: ENC[AES256_GCM,data:FTMlOMe3I4+UK+xxE1BYjML5OVMVH0F7H6BEz/Ru8HDpNrvSXyJ/me8R5//D2nMnomyJs6MQGlW3wdCkaq3pq2kVUxofaXS/6Vq08mhxTZ/xoWcuLL4CEdh3keqMRyOLWeZXuOUPMnnh1SJRkD/SxE2HcXb6bCxbO/JkuyBq/qc=,iv:9zcLk3pf2jqQ1f0wRaqWcfV4QUcBf7ZdsD7MNSUiCqY=,tag:97r3VexEuZJp4YILcztzOA==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:NGA5aQTZW5nQDWg233aFlMVN+w0CXI4hDuxmmafrH7oPG7tzcjJolLAeLVqFvXNXHfCrIcWxOEXFnUWOnMIHkKU2rpC4LI0DfSzXVZQrMVwaBM8AmM+fu6OrMkQCF6COKeN5bAcS2pjiJNHlVZIRG6URRwiVVxoEnlaklapDcV0=,iv:sYANOLvJ4Bo9mxY7CrdU2FybolulFvr8027oAENuhoQ=,tag:INylg+wgXkOW2KPcd9E7GQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
