--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:0MNETZbQ,iv:Br5UjFwS0W+dGgcAehzl5fVT4PPtpQyRpkNiVCXjoQ4=,tag:+JUunpEZQFP3RLUUTExPTg==,type:str]
-ansible_user: ENC[AES256_GCM,data:f9mdSmMY,iv:HnvAe8lm5MSIzqMhzm5rwVuTuvww1ia2rRTJURag+q0=,tag:JBYRHAdqcNr3UjOwcxnlmg==,type:str]
+kind: ENC[AES256_GCM,data:tITYDzEW,iv:WpgAL+LC2mOVgtiHbK5gSwauwNhX1nHCtKCbfUMMvpk=,tag:uDuu0pxpTPvbYvk+SUHsuQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:lOZJ26h0,iv:jtje7mDlXK7qqhXu4QHl9hapzmFTXhVRZqfJlwnePco=,tag:77D7et3RBF592+OrJcEy3w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhVzBOMHpjV0JpbTg2ejVu
-            UU5EUHYxQ3l2bURpYXNLVDZLalpsZG42K1JRCnJSVHdqUVRScUVldzZxelFHUGV0
-            MlREZ3JkNTlMVUh3WitSbnRyNFR5QVkKLS0tIHlobklTekJtMGFsclhqNkI0Y0Ns
-            Uk9aOWtzdU9QOVpPeUMxaUdrV0F6NU0K6HrNzi2MzGlCJz85+YCKnYCVl/FHBeIl
-            G8zfVuhz/HSMWanypgsta4zYrY9AihLhghEN/VF0I4eUzoRPzLgxfg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxNnY2cGJWWjhFQjdueUw3
+            YVNHR29mOG9zckM4bWg3eVBsTVdCTndndTFNCk1NemZlV3kyMFhtWjVUR3haZ1Bh
+            U0pjLzNVNWlnK0kwTlZzVmxlMTFZM3MKLS0tIG11MElkODI4RTRINEZ2dWgzZXlk
+            T3dPcnlzbnllQWcwTEpoakwwL01yRk0KORebISKwfn+QwLETDD04IMWWfx07zunv
+            Rmv1w/iNERAPVaO9t+qdyqGAGSQPIpZm8Z0YcofoNxN2wf4GONBTSA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-20T00:03:40Z"
-    mac: ENC[AES256_GCM,data:8HboxtdwuYpGLN+fW5o44nwWI0C8ZgUwqqVhmak5zneAlP4LEBAoWdag4gcmsoIv0HQM3Lo9gz+/lCUjp7cBVYLOnwogJGCaI+mvYNuH6CkYeY0YEuEXcMr3kvp3F75xlI28g4WloBUfx2nSOuyhYR6EZbEzvNMvOdhzAqoxtFw=,iv:w4E2E44uA+Ix5ZF03qDUD7mXFCPYZhRVaFPXMiv424g=,tag:PQwyUyv23XadqTOgJDthfg==,type:str]
+    lastmodified: "2023-02-20T00:06:14Z"
+    mac: ENC[AES256_GCM,data:NNCdxKDWflmV89GUqpxtwMXksTtKKL10AVLP0ZUKpPESmCGNGddddDzFAkMZuwfVGNEqw+aV3435xIINCLQm/QiCkNu9KT8f2WFyv+JTg0ygy/oX/SXNZXDrzTpyP0X4mueDFoZOM34GQhbiO3N2TI+8dBj4axyOX6EMlxYrnBM=,iv:jfRdBjL2n+hUsdAGIgYQoXrFUrxDsxzYTgqVdBY3698=,tag:abOeYxk5MP8Vk3qn2N2lYQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
